--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="hero">
       <div class="avatar glow-on-hover"><img src="photo.jpg" alt="Foto Victor (reemplaza photo.jpg)"></div>
       <div class="title">
-        <h1>Victor Julio Huertas Gómez</h1>
+        <h1>Víctor Julio Huertas Gómez</h1>
         <div class="role muted">Ingeniero Telemático</div>
         <div style="margin-top:8px; font-size:0.95rem; font-family: 'Source Code Pro', monospace; color:var(--neon-dim);">
           Apasionado por desarrollo Fullstack, gestión de proyectos y soluciones en la nube.
@@ -307,3 +307,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
