--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </section>
 
         <!-- FOOTER / NOTE -->
-        <footer>Hecho con estilo: terminal · green neon · diseño "hacke" — Victor Julio Huertas</footer>
+        <footer>Diseñado por Victor Julio Huertas Gómez — Ingeniero Telemático</footer>
       </div>
 
       <!-- RIGHT (sidebar) -->
@@ -307,4 +307,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
