--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p></p>
 <div>
 <div>
-<div><img src="photo.jpg" alt="Foto Victor (reemplaza photo.jpg)" /></div>
+<div><img src="photo.jpg" alt="Foto Victor" /></div>
 <div>
 <h1>V&iacute;ctor Julio Huertas G&oacute;mez</h1>
 <div>Ingeniero Telem&aacute;tico</div>
@@ -113,3 +113,4 @@ IDIOMAS</div>
 </div>
 </div>
 <p></p>
+
