--- a/index.html
+++ b/index.html
@@ -125,11 +125,26 @@
       background: rgba(0,0,0,0.18); border-radius:8px; padding:12px; border:1px solid rgba(255,255,255,0.02);
       font-family:"Source Code Pro", monospace; font-size:0.92rem; color:var(--neon);
     }
-
+    
     /* typing cursor */
     .cursor { display:inline-block; width:8px; height:18px; background:var(--neon); margin-left:6px; animation: blink 1s steps(2) infinite; vertical-align:middle; border-radius:2px;}
     @keyframes blink { 0%,50%{ opacity:1 } 51%,100%{ opacity:0 } }
 
+    @media (max-width: 576px) {
+  .hero {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .avatar {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 12px;
+  }
+  .title {
+    align-items: center;
+  }
+}
   </style>
 </head>
 <body>
@@ -299,6 +314,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
